[tool.poetry]
name = "speedtest-stats-telegrambot-1"
version = "0.1.0"
description = ""
authors = ["lesbass <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
